Add AccessLogger and Introduce JSpecify and NullAway